ola-parser/src/testdata/syntaxTests/metaTypes/typeNotRegularIdentifierParameter.sol
contract Test {
    fn f(u256 type)  {
    }
}
// ----
// ParserError 2314: (36-40): Expected ',' but got 'type'
